# flask_test_form-3

./: main.py  pyproject.toml
temp/templ_1/: add_post.html  add_post_wtf.html
